--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,31 @@
         </form>
 
         
+
+
+        <div class="row g-3">
+              
+          <% thoughts.forEach(thought => { %>
+          
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                
+                <div class="card">
+                    
+                    <div class="card-body d-flex justify-content-between aligh-item-center">
+                        
+                        <div><%= thoughts.Title%></div>
+                        <button data-up-vote-btn class="px-1 py-0 btn btn-primary">+</button>
+                    </div> 
+                </div>
+            </div>
+          <% }) %>    
+        </div>
+        
+        
+
+
+
+
     </div>
 </body>
 </html>
